# oop

Lab 03/ModelViewer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lab 03/ModelViewer/Adapters/: ModelObjectEntityAdapter.cpp  ModelObjectEntityAdapter.h
Lab 03/ModelViewer/Adapters/DrawSceneAdapter/: QtSceneAdapter.cpp  QtSceneAdapter.h  SceneAdapterCreator.cpp  SceneAdapterCreator.h  SceneAdapterFactory.cpp  SceneAdapterFactory.h  drawsceneadapter.cpp  drawsceneadapter.h  drawsceneinneradapter.h  drawsceneinnteradapter.cpp
Lab 03/ModelViewer/Adapters/FileLoaderAdapter/: fileloaderadapter.cpp  fileloaderadapter.h
Lab 03/ModelViewer/Adapters/PenAdapter/: penadapter.cpp  penadapter.h
Lab 03/ModelViewer/Adapters/RotateTraceCameraAdapter/: RotateTraceCameraAdapter.cpp  RotateTraceCameraAdapter.h
Lab 03/ModelViewer/Adapters/TransformationMatrix/: TransformationMatrix.cpp  TransformationMatrix.h
Lab 03/ModelViewer/Builders/: CarcassModelCreator.cpp  CarcassModelCreator.h  FileReader.cpp  FileReader.h  FileReaderCreator.cpp  FileReaderCreator.h  ModelSourceCreator.cpp  ModelSourceCreator.h  SourceCreator.cpp  SourceCreator.h  SourceFactory.cpp  SourceFactory.h  TextDotEdgesModelSource.cpp  TextDotEdgesModelSource.h  TextEdgesModelSource.h  TextModelSource.cpp
Lab 03/ModelViewer/Builders/AbsModelSource/: AbsCorrectModelSource.cpp  AbsCorrectModelSource.h
Lab 03/ModelViewer/Builders/ModelBuilders/: CarcassDotEdgesModelBuilder.cpp  CarcassDotEdgesModelBuilder.h  CarcassEdgesModelBuilder.cpp  CarcassEdgesModelBuilder.h  CarcassModelBuilder.cpp  CarcassModelBuilder.h
Lab 03/ModelViewer/Builders/ModelCreator/: modelcreator.cpp  modelcreator.h
Lab 03/ModelViewer/Builders/ModelCreatorSolution/: modelcreatorsolution.cpp  modelcreatorsolution.h
Lab 03/ModelViewer/Builders/ModelDirector/: modeldirector.cpp  modeldirector.h
Lab 03/ModelViewer/Builders/ModelDirector/EdgesModelDirector/: edgesmodeldirector.cpp  edgesmodeldirector.h
Lab 03/ModelViewer/Builders/ModelDirectors/: CarcassDotEdgesModelDirector.cpp  CarcassDotEdgesModelDirector.h  CarcassEdgesModelDirector.cpp  CarcassEdgesModelDirector.h  CarcassModelDirector.cpp  CarcassModelDirector.h
Lab 03/ModelViewer/Builders/Reader/: filereader.cpp  filereader.h
Lab 03/ModelViewer/Builders/Solutions/: CarcassCreatorSolution.h  CarcassSolution.cpp
Lab 03/ModelViewer/Commands/: basecommand.cpp  basecommand.h
Lab 03/ModelViewer/Commands/CameraCommand/: CameraCommand.h  cameracommand.cpp
Lab 03/ModelViewer/Commands/CameraCommand/AddCameraCommand/: addcameracommand.cpp  addcameracommand.h
Lab 03/ModelViewer/Commands/CameraCommand/DeleteCameraCommand/: deletecameracommand.cpp  deletecameracommand.h
Lab 03/ModelViewer/Commands/ModelCommand/: modelcommand.cpp  modelcommand.h
Lab 03/ModelViewer/Commands/SceneCommand/: scenecommand.cpp  scenecommand.h
Lab 03/ModelViewer/Commands/UndoCommand/: undocommand.cpp  undocommand.h
Lab 03/ModelViewer/Facade/: QtMiddlewareFacade.cpp  QtMiddlewareFacade.h  facade.cpp  facade.h
Lab 03/ModelViewer/Factory/: uicreator.cpp  uicreator.h  uifactorybase.cpp  uifactorybase.h
Lab 03/ModelViewer/Factory/UIFactorySolution/: uifactorysolution.cpp  uifactorysolution.h
Lab 03/ModelViewer/Factory/UIQtFactory/: RefDrawSceneCreator.h  uiqtfactory.cpp  uiqtfactory.h
Lab 03/ModelViewer/Managers/: basemanager.cpp  basemanager.h
Lab 03/ModelViewer/Managers/DependencyManager/: DependencyManager.cpp  DependencyManager.h
Lab 03/ModelViewer/Managers/DrawManager/: drawmanager.cpp  drawmanager.h
Lab 03/ModelViewer/Managers/HistoryManager/: HistoryManager.cpp  HistoryManager.h
Lab 03/ModelViewer/Managers/LoadManager/: loadmanager.cpp  loadmanager.h
Lab 03/ModelViewer/Managers/ManagerCreator/: managercreator.h
Lab 03/ModelViewer/Managers/ManagerSolution/: managersolution.cpp  managersolution.h
Lab 03/ModelViewer/Managers/SceneManager/: scenemanager.cpp  scenemanager.h
Lab 03/ModelViewer/Managers/TransformManager/: transformmanager.cpp  transformmanager.h
Lab 03/ModelViewer/Model/: CarcassEdgesDataImplementor.cpp  CarcassEdgesDataImplementor.h  CarcassEdgesDotImplementor.cpp  CarcassEdgesDotImplementor.h  CarcassModelEntity.cpp  CarcassModelEntity.h  CarcassModelImplementor.cpp  CarcassModelImplementor.h  ModelAbstraction.cpp  ModelAbstraction.h  ModelImplementor.cpp  ModelImplementor.h
Lab 03/ModelViewer/Primitives/EdgeData/: edgedata.cpp  edgedata.h
Lab 03/ModelViewer/Primitives/Matrix/: matrixbase.cpp  matrixbase.h
Lab 03/ModelViewer/Primitives/Point2d/: Point2d.h
Lab 03/ModelViewer/Primitives/Point3d/: point3d.cpp  point3d.h
Lab 03/ModelViewer/Primitives/Transformation/: BaseTransformation.cpp  BaseTransformation.h  TransformHelper.cpp  TransformHelper.h  TransformationData.cpp  TransformationData.h
Lab 03/ModelViewer/Scene/: ModelObjectCreator.cpp  ModelObjectCreator.h  ModelObjectFactory.cpp  ModelObjectFactory.h  scene.cpp  scene.h
Lab 03/ModelViewer/Scene/Camera/: CameraCreator.cpp  CameraCreator.h  cameraobject.cpp  cameraobject.h
Lab 03/ModelViewer/Scene/CompositeSceneObject/: CompositeCreator.cpp  CompositeCreator.h  SimpleCompositeObject.cpp  SimpleCompositeObject.h  compositesceneobject.cpp  compositesceneobject.h
Lab 03/ModelViewer/Scene/ExceptionBase/: BaseException.cpp  BaseException.h  NotFoundItemScene.h
Lab 03/ModelViewer/Scene/InvisibleSceneObject/: invisiblesceneobject.cpp  invisiblesceneobject.h
Lab 03/ModelViewer/Scene/SceneObject/: CarcassObject.cpp  CarcassObject.h  SceneObjectMemento.cpp  SceneObjectMemento.h  sceneobject.cpp  sceneobject.h
Lab 03/ModelViewer/Scene/VisibleSceneObject/: visiblesceneobject.cpp  visiblesceneobject.h
Lab 03/ModelViewer/Visitors/: visitorbase.cpp  visitorbase.h
Lab 03/ModelViewer/Visitors/DrawVisitor/: drawvisitor.cpp  drawvisitor.h
Lab 03/ModelViewer/Visitors/ModelEntityVisitors/: ModelEntityDrawVisitor.cpp  ModelEntityDrawVisitor.h  ModelEntityVisitorBase.cpp  ModelEntityVisitorBase.h
Lab 03/ModelViewer/Visitors/TransformVisitor/: TransformVisitor.cpp  TransformVisitor.h
(+59 files in other folders)
